# image-to-bytes

./: CMakeLists.txt  README.md  image-to-bytes  main.cpp
cmake/: FindCairo.cmake
